[gd_scene load_steps=6 format=3 uid="uid://dugx4xcb626r3"]

[ext_resource type="Script" uid="uid://bgths270rmk0s" path="res://ui/upgrade_manager.gd" id="1_sy0ma"]
[ext_resource type="PackedScene" uid="uid://bcl0g8pgb6225" path="res://ui/part.tscn" id="2_myjmj"]
[ext_resource type="Texture2D" uid="uid://d4iml72e433ws" path="res://assets/upgrade sprites/upgrade grid.png" id="3_myjmj"]
[ext_resource type="Texture2D" uid="uid://yc316puhweh5" path="res://assets/upgrade sprites/upgrade grid lines.png" id="4_e5t5k"]
[ext_resource type="PackedScene" uid="uid://b8qd5ur6213y2" path="res://ui/part_preview.tscn" id="5_e5t5k"]

[node name="upgrade_manager" type="CanvasLayer"]
script = ExtResource("1_sy0ma")
part_scene = ExtResource("2_myjmj")
preview_scene = ExtResource("5_e5t5k")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 704.0
color = Color(0.1176, 0.19512, 0.24, 1)

[node name="grid" type="Sprite2D" parent="."]
position = Vector2(192, 128)
texture = ExtResource("3_myjmj")
centered = false

[node name="grid_lines" type="Sprite2D" parent="."]
position = Vector2(416, 352)
texture = ExtResource("4_e5t5k")

[node name="menu" type="ScrollContainer" parent="."]
offset_left = 768.0
offset_top = 64.0
offset_right = 960.0
offset_bottom = 640.0

[node name="upgrades_list" type="VBoxContainer" parent="menu"]
layout_mode = 2

[node name="fake" type="HBoxContainer" parent="menu/upgrades_list"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="fake preview" parent="menu/upgrades_list/fake" instance=ExtResource("5_e5t5k")]
layout_mode = 2

[node name="fake label" type="Label" parent="menu/upgrades_list/fake"]
layout_mode = 2
text = "fake 9001"
metadata/id = 0

[node name="build_button" type="Button" parent="."]
offset_left = 320.0
offset_top = 592.0
offset_right = 512.0
offset_bottom = 639.0
text = "Build!"

[node name="hp_label" type="Label" parent="."]
offset_left = 1024.0
offset_top = 64.0
offset_right = 1064.0
offset_bottom = 87.0
text = "HP: +0"

[node name="energy_label" type="Label" parent="."]
offset_left = 1024.0
offset_top = 96.0
offset_right = 1104.0
offset_bottom = 119.0
text = "Energy: +0"

[node name="power_label" type="Label" parent="."]
offset_left = 1024.0
offset_top = 128.0
offset_right = 1100.0
offset_bottom = 151.0
text = "Power: +0"

[node name="speed_label" type="Label" parent="."]
offset_left = 1024.0
offset_top = 160.0
offset_right = 1099.0
offset_bottom = 183.0
text = "Speed: +0"

[node name="capacity_label" type="Label" parent="."]
offset_left = 1024.0
offset_top = 192.0
offset_right = 1117.0
offset_bottom = 215.0
text = "Capacity: +0"

[node name="construction_label" type="Label" parent="."]
offset_left = 1024.0
offset_top = 224.0
offset_right = 1151.0
offset_bottom = 247.0
text = "Construction: +0"

[node name="uniques_menu" type="ScrollContainer" parent="."]
offset_left = 1024.0
offset_top = 256.0
offset_right = 1216.0
offset_bottom = 640.0

[node name="uniques_list" type="VBoxContainer" parent="uniques_menu"]
layout_mode = 2

[connection signal="gui_input" from="menu" to="." method="_on_menu_input"]
[connection signal="pressed" from="build_button" to="." method="_on_build_button_pressed"]
